# scsga-aaai21

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SCSGA.sln  requirements.txt
PYTHON-API/: CMakeLists.txt  scsga.cpp  scsga.h
SCSGA/: SCSGA.vcxproj  SCSGA.vcxproj.filters  coalition.cpp  coalition.h  coalitional_values_generator.cpp  coalitional_values_generator.h  coalitional_values_generator_MPD.cpp  coalitional_values_generator_MPD.h  coalitional_values_generator_NDCS.cpp  coalitional_values_generator_NDCS.h  coalitional_values_generator_NPD.cpp  coalitional_values_generator_NPD.h  coalitional_values_generator_NRD.cpp  coalitional_values_generator_NRD.h  coalitional_values_generator_NSD.cpp  coalitional_values_generator_NSD.h  coalitional_values_generator_NSRD.cpp  coalitional_values_generator_NSRD.h  coalitional_values_generator_UPD.cpp  coalitional_values_generator_UPD.h  coalitional_values_generator_custom.cpp  coalitional_values_generator_custom.h  coalitional_values_generator_file.cpp  coalitional_values_generator_file.h  coalitional_values_generator_simple.cpp  coalitional_values_generator_simple.h  coalitional_values_generator_sparse.cpp  coalitional_values_generator_sparse.h  coalitional_values_generator_trap.cpp  coalitional_values_generator_trap.h  instance_solution.cpp  instance_solution.h  problem.cpp  problem.h  selection_policy.cpp  selection_policy.h  solver.h  solver_agent_greed.cpp  solver_agent_greed.h  solver_annealing.cpp  (+25 more)
SCSGA-Benchmark/: CMakeLists.txt  SCSGA-Benchmark.vcxproj  SCSGA-Benchmark.vcxproj.filters  benchmark.cpp  benchmark.h  benchmark.py  cem.py  experiment_description.py  pattern.tex
SCSGA-Benchmark/specifications/: agent_npd.json  agent_snpd.json  agent_supd.json  agent_upd.json  cem_npd.json  cem_snpd.json  cem_supd.json  cem_upd.json  large_npd.json  large_snpd.json  large_supd.json  large_upd.json  many_npd.json  many_snpd.json  many_supd.json  many_upd.json  time_limit_npd.json  time_limit_snpd.json  time_limit_supd.json  time_limit_upd.json
